Cache resource keys and optimize reference Holder tags set
TagKeys are always interned, so we can use a reference hash set for them